Sun Jun 05 12:09:59 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.1

	* pokernetwork/pokerbot.py (PokerBotFactory.__init__): name generation

Fri Jun 03 21:16:42 2005  Loic Dachary  <loic@gnu.org>

	* pokerclient2d/lobby.c (handle_lobby): s/stud7/7stud/

	* pokerui/pokerrenderer.py (PokerRenderer.showTournaments): handle tables/tournament
	  switching with persistent values.

	* pokernetwork/pokerclient.py (PokerClientFactory.__init__): end_round and begin_round
	  delays

	* pokernetwork/pokerserver.py (PokerServerFactory.getPersonalInfo): email None 
	  converted to ""

	* pokerui/pokerinterface.py (PokerInterface.handleLobby): two arguments only
	  and not three (https://gna.org/bugs/index.php?func=detailitem&item_id=2387)

	* pokernetwork/pokerserver.py (PokerServer.listTables): 
	* pokernetwork/pokerclient.py (PokerClientProtocol.resendPackets): fill all game
	  information.

Fri May 06 10:31:37 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.0